--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,17 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="kor">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,                               minimum-scale=1.0,maximum-scale=1.0,
-      user-scalable=no" />
+      user-scalable=no"/>
     <title>Title</title>
 </head>
 <body>
 <h1>askdjango</h1>
+
 <p>안녕하세요</p>
+
 <ul>
-    <li>http://localhost:8000/blog/ 주소로 접속해보세요. </li>
-    <li>템플릿 경로를 blog/templates/post_list.html 경로가 아닌 blog/ templates/blog/post_list.html 경로를 쓰는 지에 대한 이유는, 후에 Template Loader에서 설명합니</li>
+    {% for post in post_list %}
+        <li>
+            {{ post.id }}
+            {{ post.title }}
+            <small>by {{ post.author }}</small>
+            <small>at {{ post.updated_at }}</small>
+        </li>
+    {% endfor %}
+</ul>
+
+
+<ul>
+    <li>http://localhost:8000/blog/ 주소로 접속해보세요.</li>
+    <li>템플릿 경로를 blog/templates/post_list.html 경로가 아닌 blog/ templates/blog/post_list.html 경로를 쓰는 지에 대한 이유는, 후에 Template
+        Loader에서 설명합니
+    </li>
 </ul>
 </body>
 </html>
