--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "blog/layouts.html" %}
 
 
-<h1>{{ post.title }}</h1>
+{% block title %}
+
+    {{ post.title }}
+{% endblock %}
+
+{% block content %}
+
+    <h1>{{ post.title }}</h1>
 {{ post.content|linebreaks }}
 <hr/>
 <h3>Comments</h3>
@@ -21,7 +22,6 @@
     </li>
     {% endfor %}
 </ul>
-{#댓글 코드셋?#}
 
-</body>
-</html>
+
+{% endblock %}
