--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,32 +7,10 @@
     <title>Title</title>
 </head>
 <body>
+
 <h1>askdjango</h1>
+{% block content %}
+{% endblock %}
 
-<p>안녕하세요</p>
-<form action="" method="get">
-    <input type="text" name="q" value="{{ q }}"/>
-    <input type="submit" value="검색"/>
-    
-</form>
-
-<ul>
-    {% for post in post_list %}
-        <li>
-            {{ post.id }}
-            <a href="/blog/{{ post.id }}">{{ post.title }}</a>
-            <small>by {{ post.author }}</small>
-            <small>at {{ post.updated_at }}</small>
-        </li>
-    {% endfor %}
-</ul>
-
-
-<ul>
-    <li>http://localhost:8000/blog/ 주소로 접속해보세요.</li>
-    <li>템플릿 경로를 blog/templates/post_list.html 경로가 아닌 blog/ templates/blog/post_list.html 경로를 쓰는 지에 대한 이유는, 후에 Template
-        Loader에서 설명합니
-    </li>
-</ul>
 </body>
 </html>
