--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends "blog/layouts.html" %}
+{% extends "blog/layout.html" %}
 
 
 {% block title %}
@@ -23,5 +23,7 @@
     {% endfor %}
 </ul>
 
+<hr/>
 
+    <a href="{%  url "post_list" %}">글 목록</a>
 {% endblock %}
