--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -8,22 +8,30 @@
 
 {% block content %}
 
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+
+            </div>
+        </div>
+    </div>
+
     <h1>{{ post.title }}</h1>
-{{ post.content|linebreaks }}
-<hr/>
-<h3>Comments</h3>
+    {{ post.content|linebreaks }}
+    <hr/>
+    <h3>Comments</h3>
 
-<ul>
-    {% for comment in post.comment_set.all %}
-    <li>
-        {{ comment.message }}
-        <small>by {{ comment.author }}</small>
-        <small>at {{ comment.updated_at }}</small>
-    </li>
-    {% endfor %}
-</ul>
+    <ul>
+        {% for comment in post.comment_set.all %}
+            <li>
+                {{ comment.message }}
+                <small>by {{ comment.author }}</small>
+                <small>at {{ comment.updated_at }}</small>
+            </li>
+        {% endfor %}
+    </ul>
 
-<hr/>
+    <hr/>
 
-    <a href="{%  url "post_list" %}">글 목록</a>
+    <a href="{% url "blog:post_list" %}" class="btn btn-primary">글 목록</a>
 {% endblock %}
